--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>GST</title>
+	<title>GRAHA SOLUSI TEKNOLOGI</title>
 	<meta content="" name="descriptison">
 	<meta content="" name="keywords">
 
@@ -14,7 +14,9 @@
 	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+		rel="stylesheet">
 
 	<!-- Vendor CSS Files -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -97,8 +99,10 @@
 						<div class="content">
 							<h3>Why Choose PT. GST?</h3>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-								Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+								Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus
+								optio ad corporis.
 							</p>
 							<div class="text-center">
 								<a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
@@ -112,21 +116,24 @@
 									<div class="icon-box mt-4 mt-xl-0">
 										<i class="bx bx-receipt"></i>
 										<h4>Corporis voluptates sit</h4>
-										<p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+										<p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut
+											aliquip</p>
 									</div>
 								</div>
 								<div class="col-xl-4 d-flex align-items-stretch">
 									<div class="icon-box mt-4 mt-xl-0">
 										<i class="bx bx-cube-alt"></i>
 										<h4>Ullamco laboris ladore pan</h4>
-										<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+										<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+											deserunt</p>
 									</div>
 								</div>
 								<div class="col-xl-4 d-flex align-items-stretch">
 									<div class="icon-box mt-4 mt-xl-0">
 										<i class="bx bx-images"></i>
 										<h4>Labore consequatur</h4>
-										<p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+										<p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis
+											facere</p>
 									</div>
 								</div>
 							</div>
@@ -143,29 +150,36 @@
 
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch">
-						<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+						<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4"
+							data-vbtype="video" data-autoplay="true"></a>
 					</div>
 
-					<div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
+					<div
+						class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
 						<h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-						<p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>
+						<p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed
+							minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero
+							laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-fingerprint"></i></div>
 							<h4 class="title"><a href="">Lorem Ipsum</a></h4>
-							<p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+							<p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
+								excepturi sint occaecati cupiditate non provident</p>
 						</div>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-gift"></i></div>
 							<h4 class="title"><a href="">Nemo Enim</a></h4>
-							<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+							<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui
+								blanditiis praesentium voluptatum deleniti atque</p>
 						</div>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-atom"></i></div>
 							<h4 class="title"><a href="">Dine Pad</a></h4>
-							<p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
+							<p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis
+								odit. Sunt aut deserunt minus aut eligendi omnis</p>
 						</div>
 
 					</div>
@@ -180,7 +194,9 @@
 
 				<div class="section-title">
 					<h2>Product</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 				</div>
 
 				<div class="row">
@@ -264,7 +280,9 @@
 
 				<div class="section-title">
 					<h2>Portfolio</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 				</div>
 
 				<div class="row">
@@ -287,8 +305,11 @@
 								<h4>Card 1</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+									<a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
+										class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
+										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
+											class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -301,8 +322,11 @@
 								<h4>Card 3</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+									<a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
+										class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
+										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
+											class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -315,8 +339,11 @@
 								<h4>Web 3</h4>
 								<p>Web</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+									<a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery"
+										class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
+										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
+											class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -329,8 +356,11 @@
 								<h4>Card 1</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+									<a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
+										class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
+										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
+											class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -343,8 +373,11 @@
 								<h4>Card 3</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+									<a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
+										class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
+										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
+											class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -357,8 +390,11 @@
 								<h4>Web 3</h4>
 								<p>Web</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+									<a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery"
+										class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
+										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
+											class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -375,7 +411,9 @@
 
 				<div class="section-title">
 					<h2>Teams</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 				</div>
 
 				<div class="row">
@@ -458,7 +496,9 @@
 			<div class="container" data-aos="zoom-in">
 				<div class="section-title">
 					<h2>Clients</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 				</div>
 
 				<div class="row justify-content-center">
@@ -484,7 +524,9 @@
 
 				<div class="section-title">
 					<h2>Contact</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 				</div>
 			</div>
 
@@ -526,20 +568,27 @@
 						<form action="forms/contact.php" method="post" role="form" class="php-email-form">
 							<div class="form-row">
 								<div class="col-md-6 form-group">
-									<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+									<input type="text" name="name" class="form-control" id="name"
+										placeholder="Your Name" data-rule="minlen:4"
+										data-msg="Please enter at least 4 chars" />
 									<div class="validate"></div>
 								</div>
 								<div class="col-md-6 form-group">
-									<input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+									<input type="email" class="form-control" name="email" id="email"
+										placeholder="Your Email" data-rule="email"
+										data-msg="Please enter a valid email" />
 									<div class="validate"></div>
 								</div>
 							</div>
 							<div class="form-group">
-								<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+								<input type="text" class="form-control" name="subject" id="subject"
+									placeholder="Subject" data-rule="minlen:4"
+									data-msg="Please enter at least 8 chars of subject" />
 								<div class="validate"></div>
 							</div>
 							<div class="form-group">
-								<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+								<textarea class="form-control" name="message" rows="5" data-rule="required"
+									data-msg="Please write something for us" placeholder="Message"></textarea>
 								<div class="validate"></div>
 							</div>
 							<div class="mb-3">
@@ -647,11 +696,13 @@
 						<div id="the-message"></div>
 						<div class="form-group">
 							<input type="hidden" name="txt_id">
-							<input type="text" class="form-control form-login" id="txt_name" name="txt_name" placeholder="Email...">
+							<input type="text" class="form-control form-login" id="txt_name" name="txt_name"
+								placeholder="Email...">
 						</div>
 						<div class="form-group">
 							<input type="hidden" name="txt_id">
-							<input type="text" class="form-control form-login " id="txt_name" name="txt_name" placeholder="Password...">
+							<input type="text" class="form-control form-login " id="txt_name" name="txt_name"
+								placeholder="Password...">
 						</div>
 						<div class="form-group">
 							<a href="" class="btn btn-info btn-lg btn-block btn-login">Login</a>
@@ -686,7 +737,7 @@
 	<script src="js/main.js"></script>
 	<script src="js/owl.carousel.js"></script>
 	<script>
-		$(document).ready(function() {
+		$(document).ready(function () {
 			$('#myModal').modal('hide');
 			$('.customer-logos').slick({
 				slidesToShow: 6,
