menambahkan slick slide client

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	<!-- Template Main CSS File -->
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style1.css">
+	<!-- Slick Slide Animation Client-->
+	<link rel="stylesheet" href="css/corousel.css">
 
 </head>
 
@@ -501,19 +503,18 @@
 						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 				</div>
 
-				<div class="row justify-content-center">
-					<div class="col-xl-10">
-						<div class="owl-carousel clients-carousel">
-							<h2></h2>
-							<img src="img/clients/client-1.png" alt="">
-							<img src="img/clients/client-2.png" alt="">
-							<img src="img/clients/client-3.png" alt="">
-							<img src="img/clients/client-4.png" alt="">
-							<img src="img/clients/client-5.png" alt="">
-							<img src="img/clients/client-6.png" alt="">
-							<img src="img/clients/client-7.png" alt="">
-							<img src="img/clients/client-8.png" alt="">
-						</div>
+				<div class="row">
+					<div class="container">
+						<section class="customer-logos slider">
+							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-1.png"></div>
+							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-2.png"></div>
+							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-3.png"></div>
+							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-4.png"></div>
+							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-5.png"></div>
+							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-6.png"></div>
+							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-7.png"></div>
+							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-8.png"></div>
+						</section>
 					</div>
 				</div>
 			</div>
@@ -736,14 +737,15 @@
 	<!-- Template Main JS File -->
 	<script src="js/main.js"></script>
 	<script src="js/owl.carousel.js"></script>
+	<script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
 	<script>
-		$(document).ready(function () {
+		$(document).ready(function() {
 			$('#myModal').modal('hide');
 			$('.customer-logos').slick({
 				slidesToShow: 6,
 				slidesToScroll: 1,
 				autoplay: true,
-				autoplaySpeed: 1500,
+				autoplaySpeed: 1000,
 				arrows: false,
 				dots: false,
 				pauseOnHover: false,
