--- a/index.html
+++ b/index.html
@@ -506,14 +506,14 @@
 				<div class="row">
 					<div class="container">
 						<section class="customer-logos slider">
-							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-1.png"></div>
-							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-2.png"></div>
-							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-3.png"></div>
-							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-4.png"></div>
-							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-5.png"></div>
-							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-6.png"></div>
-							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-7.png"></div>
-							<div class="slide"><img src="<?= base_url('assets/front/') ?>img/clients/client-8.png"></div>
+							<div class="slide"><img src="img/clients/client-1.png"></div>
+							<div class="slide"><img src="img/clients/client-2.png"></div>
+							<div class="slide"><img src="img/clients/client-3.png"></div>
+							<div class="slide"><img src="img/clients/client-4.png"></div>
+							<div class="slide"><img src="img/clients/client-5.png"></div>
+							<div class="slide"><img src="img/clients/client-6.png"></div>
+							<div class="slide"><img src="img/clients/client-7.png"></div>
+							<div class="slide"><img src="img/clients/client-8.png"></div>
 						</section>
 					</div>
 				</div>
