menambahkan descripsi produck

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>GRAHA SOLUSI TEKNOLOGI</title>
+	<title>PT. GRAHA SOLUSI TEKNOLOGI</title>
 	<meta content="" name="descriptison">
 	<meta content="" name="keywords">
 
@@ -85,7 +85,7 @@
 	<section id="hero" class="d-flex align-items-center">
 		<div class="container">
 			<h1>Welcome to PT. Graha Solusi Teknologi</h1>
-			<h2>We are team of talanted designers making websites with Bootstrap</h2>
+			<h2>We are team of PT. Graha Solusi Teknologi your solution project</h2>
 			<a href="#about" class=" btn-get-started scrollto">Get Started</a>
 		</div>
 	</section><!-- End Hero -->
@@ -152,36 +152,31 @@
 
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch">
-						<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4"
+						<a href="https://www.youtube.com/watch?v=Y-K3Kqf6GjA" class="venobox play-btn mb-4"
 							data-vbtype="video" data-autoplay="true"></a>
 					</div>
 
 					<div
 						class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
-						<h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-						<p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed
-							minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero
-							laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>
+						<h3>Solution for your needs</h3>
+						<p>As a leading security solution provider, Dahua offers end-to-end solutions for various applications and vertical industries including traffic management, government facilities, retail, and banking & finance and so on. Application solutions such as Face Recognition and LPR feature not only cameras, recorders, and VMS, but also open interfaces for convenient 3rd party integration.</p>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-fingerprint"></i></div>
-							<h4 class="title"><a href="">Lorem Ipsum</a></h4>
-							<p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
-								excepturi sint occaecati cupiditate non provident</p>
+							<h4 class="title"><a href="">Perimeter Protection</a></h4>
+							<p class="description">Dahua perimeter protection solution is designed to provide a high-efficiency, reliable, cost-effective and visual system powered by artificial intelligence technologye</p>
 						</div>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-gift"></i></div>
-							<h4 class="title"><a href="">Nemo Enim</a></h4>
-							<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui
-								blanditiis praesentium voluptatum deleniti atque</p>
+							<h4 class="title"><a href="">Face Recognition</a></h4>
+							<p class="description">Dahua Face Recognition solutions offer high accuracy of detection rate and recognition rate with its advanced AI technology ,and can provide such functions as Face Detection, Face Comparison, Intelligent Search, Face Image Search, Face Database Management, Mobile App Linkage, Information Display, Video Full Color ,etc.</p>
 						</div>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-atom"></i></div>
-							<h4 class="title"><a href="">Dine Pad</a></h4>
-							<p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis
-								odit. Sunt aut deserunt minus aut eligendi omnis</p>
+							<h4 class="title"><a href="">Epidemic Safety Protection Solution</a></h4>
+							<p class="description">With the massive scope of the COVID-19 outbreak globally, various countries have announced new regulations to combat the spread of this pandemic, such as maintaining distance in essential activities, limiting in the number of people inside, monitoring of people’s body temperature, etc.</p>
 						</div>
 
 					</div>
@@ -195,10 +190,8 @@
 			<div class="container">
 
 				<div class="section-title">
-					<h2>Product</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<h2>Products</h2>
+					<p>Abiding by the philosophy of "Innovation for All", Dahua offers a wide portfolio of security-related products, ranging from IPC, NVR, HDCVI cameras, HCVR, PTZ cameras, thermal cameras, Access Control, Video Intercom, Alarms, Mobile & Traffic products, display & control, VMS and so on. Dahua products are based on an open platform that features easy integration with third party partners through a standard SDK</p>
 				</div>
 
 				<div class="row">
@@ -207,26 +200,16 @@
 							<div class="icon">
 								<i class="img-icon-camera"></i>
 							</div>
-							<h4><a href="">Camera</a></h4>
-							<p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+							<h4><a href="">Network Camera</a></h4>
+							<p>As an innovation leader, Dahua Technology is committed to offering cutting-edge technologies and products, such as multi-sensor panoramic cameras...</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
 							<div class="icon"><i class="icofont-drug"></i></div>
-							<h4><a href="">Recorder</a></h4>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
-						<div class="icon-box">
-							<div class="icon">
-								<i class="img-icon-ai"></i>
-							</div>
-							<h4><a href="">AI Camera</a></h4>
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+							<h4><a href="">HDCVI Camera</a></h4>
+							<p>As the inventor of HDCVI (High Definition Composite Video Interface) technology, Dahua continuously invests in the technology to rejuvenate existing coaxial-based systems since its launch in 2012 with its own patents... </p>
 						</div>
 					</div>
 
@@ -235,40 +218,50 @@
 							<div class="icon">
 								<i class="img-icon-ptz"></i>
 							</div>
-							<h4><a href="">PTZ</a></h4>
-							<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+							<h4><a href="">PTZ Cameras</a></h4>
+							<p>Dahua offers both network and HDCVI PTZ cameras. PTZ cameras use pan, tilt, and zoom functionality to provide both wide-area coverage and great detail...</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
 							<div class="icon"><i class="icofont-disabled"></i></div>
-							<h4><a href="">Transmision</a></h4>
-							<p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+							<h4><a href="">Thermal Cameras</a></h4>
+							<p>Thermal cameras, which do not require a light source, are excellent for providing enhanced coverage in in diverse environments, such as those with harsh conditions or extreme darkness...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<i class="img-icon-ai"></i>
+							</div>
+							<h4><a href="">Network Recorders</a></h4>
+							<p>Dahua Ultra, Pro, and Lite Series network recorders are tailored to fit different applications. Ultra Series recorders offer the best performance and highest quality...</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
 							<div class="icon"><i class="icofont-autism"></i></div>
-							<h4><a href="">Storage</a></h4>
-							<p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+							<h4><a href="">HDCVI Recorders</a></h4>
+							<p>Dahua HDCVI (High Definition Composite Video Interface) Recorders include the Ultra, Pro, and Lite Series to fit various applications. Ultra Series recorders offer the best performance and highest quality...</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
 							<div class="icon"><i class="icofont-aids"></i></div>
-							<h4><a href="">IVS</a></h4>
-							<p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+							<h4><a href="">EZ-IP</a></h4>
+							<p>EZ-IP is perfect for small to medium size applications like home/residential security, small retail shops, and other typical SMB applications. </p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
 							<div class="icon"><i class="icofont-align-center"></i></div>
-							<h4><a href="">Mobile & Trafiic</a></h4>
-							<p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+							<h4><a href="">Video Intercoms</a></h4>
+							<p>Dahua’s Video Intercom product lineup eases communications between visitors, home owners, and property management centers.</p>
 						</div>
 					</div>
 
@@ -282,18 +275,17 @@
 
 				<div class="section-title">
 					<h2>Portfolio</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Short description of the portfolio</p>
 				</div>
 
 				<div class="row">
 					<div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
 						<ul id="portfolio-flters">
 							<li data-filter="*" class="filter-active">All</li>
-							<li data-filter=".filter-app">App</li>
-							<li data-filter=".filter-card">Card</li>
-							<li data-filter=".filter-web">Web</li>
+							<li data-filter=".filter-app">Camera</li>
+							<li data-filter=".filter-card">Access Control</li>
+							<li data-filter=".filter-web">Management</li>
+							<li data-filter=".filter-web">Video</li>
 						</ul>
 					</div>
 				</div>
@@ -413,9 +405,7 @@
 
 				<div class="section-title">
 					<h2>Teams</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Short description of the teams</p>
 				</div>
 
 				<div class="row">
@@ -498,9 +488,7 @@
 			<div class="container" data-aos="zoom-in">
 				<div class="section-title">
 					<h2>Clients</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Description Our Client</p>
 				</div>
 
 				<div class="row">
@@ -525,9 +513,7 @@
 
 				<div class="section-title">
 					<h2>Contact</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Short description of the contacts</p>
 				</div>
 			</div>
 
@@ -616,8 +602,8 @@
 			<div class="container">
 				<div class="row">
 
-					<div class="col-lg-3 col-md-6 footer-contact">
-						<h3>PT. GST</h3>
+					<div class="col-lg-5 col-md-6 footer-contact">
+						<h3>PT. GRAHA SOLUSI TEKNOLOGI</h3>
 						<p>
 							Griya Kencana Asri G-11 <br>
 							Surabaya, 60296<br>
@@ -627,7 +613,7 @@
 						</p>
 					</div>
 
-					<div class="col-lg-2 col-md-6 footer-links">
+					<div class="col-lg-3 col-md-6 footer-links">
 						<h4>Useful Links</h4>
 						<ul>
 							<li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
@@ -638,6 +624,7 @@
 						</ul>
 					</div>
 
+					<!--
 					<div class="col-lg-3 col-md-6 footer-links">
 						<h4>Our Services</h4>
 						<ul>
@@ -648,10 +635,11 @@
 							<li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
 						</ul>
 					</div>
+					-->
 
 					<div class="col-lg-4 col-md-6 footer-newsletter">
 						<h4>Join Our Newsletter</h4>
-						<p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+						<p>Get updated information about the news that dahua</p>
 						<form action="" method="post">
 							<input class="news" type="email" name="email">
 							<input type="submit" value="Subscribe">
