menambah produk dan update gambarnya

--- a/index.html
+++ b/index.html
@@ -159,24 +159,37 @@
 					<div
 						class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
 						<h3>Solution for your needs</h3>
-						<p>As a leading security solution provider, Dahua offers end-to-end solutions for various applications and vertical industries including traffic management, government facilities, retail, and banking & finance and so on. Application solutions such as Face Recognition and LPR feature not only cameras, recorders, and VMS, but also open interfaces for convenient 3rd party integration.</p>
+						<p>As a leading security solution provider, Dahua offers end-to-end solutions for various
+							applications and vertical industries including traffic management, government facilities,
+							retail, and banking & finance and so on. Application solutions such as Face Recognition and
+							LPR feature not only cameras, recorders, and VMS, but also open interfaces for convenient
+							3rd party integration.</p>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-fingerprint"></i></div>
 							<h4 class="title"><a href="">Perimeter Protection</a></h4>
-							<p class="description">Dahua perimeter protection solution is designed to provide a high-efficiency, reliable, cost-effective and visual system powered by artificial intelligence technologye</p>
+							<p class="description">Dahua perimeter protection solution is designed to provide a
+								high-efficiency, reliable, cost-effective and visual system powered by artificial
+								intelligence technologye</p>
 						</div>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-gift"></i></div>
 							<h4 class="title"><a href="">Face Recognition</a></h4>
-							<p class="description">Dahua Face Recognition solutions offer high accuracy of detection rate and recognition rate with its advanced AI technology ,and can provide such functions as Face Detection, Face Comparison, Intelligent Search, Face Image Search, Face Database Management, Mobile App Linkage, Information Display, Video Full Color ,etc.</p>
+							<p class="description">Dahua Face Recognition solutions offer high accuracy of detection
+								rate and recognition rate with its advanced AI technology ,and can provide such
+								functions as Face Detection, Face Comparison, Intelligent Search, Face Image Search,
+								Face Database Management, Mobile App Linkage, Information Display, Video Full Color
+								,etc.</p>
 						</div>
 
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-atom"></i></div>
 							<h4 class="title"><a href="">Epidemic Safety Protection Solution</a></h4>
-							<p class="description">With the massive scope of the COVID-19 outbreak globally, various countries have announced new regulations to combat the spread of this pandemic, such as maintaining distance in essential activities, limiting in the number of people inside, monitoring of people’s body temperature, etc.</p>
+							<p class="description">With the massive scope of the COVID-19 outbreak globally, various
+								countries have announced new regulations to combat the spread of this pandemic, such as
+								maintaining distance in essential activities, limiting in the number of people inside,
+								monitoring of people’s body temperature, etc.</p>
 						</div>
 
 					</div>
@@ -191,77 +204,187 @@
 
 				<div class="section-title">
 					<h2>Products</h2>
-					<p>Abiding by the philosophy of "Innovation for All", Dahua offers a wide portfolio of security-related products, ranging from IPC, NVR, HDCVI cameras, HCVR, PTZ cameras, thermal cameras, Access Control, Video Intercom, Alarms, Mobile & Traffic products, display & control, VMS and so on. Dahua products are based on an open platform that features easy integration with third party partners through a standard SDK</p>
+					<p>Abiding by the philosophy of "Innovation for All", Dahua offers a wide portfolio of
+						security-related products, ranging from IPC, NVR, HDCVI cameras, HCVR, PTZ cameras, thermal
+						cameras, Access Control, Video Intercom, Alarms, Mobile & Traffic products, display & control,
+						VMS and so on. Dahua products are based on an open platform that features easy integration with
+						third party partners through a standard SDK</p>
 				</div>
 
 				<div class="row">
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
 							<div class="icon">
-								<i class="img-icon-camera"></i>
+								<img src="img/product/camera-ip.png" alt="">
 							</div>
 							<h4><a href="">Network Camera</a></h4>
-							<p>As an innovation leader, Dahua Technology is committed to offering cutting-edge technologies and products, such as multi-sensor panoramic cameras...</p>
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
-						<div class="icon-box">
-							<div class="icon"><i class="icofont-drug"></i></div>
-							<h4><a href="">HDCVI Camera</a></h4>
-							<p>As the inventor of HDCVI (High Definition Composite Video Interface) technology, Dahua continuously invests in the technology to rejuvenate existing coaxial-based systems since its launch in 2012 with its own patents... </p>
+							<p>As an innovation leader, Dahua Technology is committed to offering cutting-edge
+								technologies and products...</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
 							<div class="icon">
-								<i class="img-icon-ptz"></i>
+								<img src="img/product/hdvci-camera.png" alt="">
+							</div>
+							<h4><a href="">HDCVI Camera</a></h4>
+							<p>As the inventor of HDCVI (High Definition Composite Video Interface) technology, Dahua
+								continuously invests in the tech... </p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/ptz-kameraa.png" alt="">
 							</div>
 							<h4><a href="">PTZ Cameras</a></h4>
-							<p>Dahua offers both network and HDCVI PTZ cameras. PTZ cameras use pan, tilt, and zoom functionality to provide both wide-area coverage and great detail...</p>
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
-						<div class="icon-box">
-							<div class="icon"><i class="icofont-disabled"></i></div>
-							<h4><a href="">Thermal Cameras</a></h4>
-							<p>Thermal cameras, which do not require a light source, are excellent for providing enhanced coverage in in diverse environments, such as those with harsh conditions or extreme darkness...</p>
+							<p>Dahua offers both network and HDCVI PTZ cameras. PTZ cameras use pan, tilt, and zoom
+								functionality to provide both...</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
 							<div class="icon">
-								<i class="img-icon-ai"></i>
+								<img src="img/product/thermal-kamera.png" alt="">
+							</div>
+							<h4><a href="">Thermal Cameras</a></h4>
+							<p>Thermal cameras, which do not require a light source, are excellent for providing
+								enhanced coverage in in diverse...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/network-recorder.png" alt="">
 							</div>
 							<h4><a href="">Network Recorders</a></h4>
-							<p>Dahua Ultra, Pro, and Lite Series network recorders are tailored to fit different applications. Ultra Series recorders offer the best performance and highest quality...</p>
+							<p>Dahua Ultra, Pro, and Lite Series network recorders are tailored to fit different
+								applications. Ultra Series recorders...
+							</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
-							<div class="icon"><i class="icofont-autism"></i></div>
+							<div class="icon">
+								<img src="img/product/hdcvi-recorder.png" alt="">
+							</div>
 							<h4><a href="">HDCVI Recorders</a></h4>
-							<p>Dahua HDCVI (High Definition Composite Video Interface) Recorders include the Ultra, Pro, and Lite Series to fit various applications. Ultra Series recorders offer the best performance and highest quality...</p>
+							<p>Dahua HDCVI (High Definition Composite Video Interface) Recorders include the Ultra, Pro,
+								and Lite Series to fit various...</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
-							<div class="icon"><i class="icofont-aids"></i></div>
+							<div class="icon">
+								<img src="img/product/ez-ipp.png" alt="">
+							</div>
 							<h4><a href="">EZ-IP</a></h4>
-							<p>EZ-IP is perfect for small to medium size applications like home/residential security, small retail shops, and other typical SMB applications. </p>
+							<p>EZ-IP is perfect for small to medium size applications like home/residential security,
+								small retail shops, and other typical...</p>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
 						<div class="icon-box">
-							<div class="icon"><i class="icofont-align-center"></i></div>
+							<div class="icon">
+								<img src="img/product/video-intercom.png" alt="">
+							</div>
 							<h4><a href="">Video Intercoms</a></h4>
-							<p>Dahua’s Video Intercom product lineup eases communications between visitors, home owners, and property management centers.</p>
+							<p>Dahua’s Video Intercom product lineup eases communications between visitors, home owners,
+								and property management...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/access32.png" alt="">
+							</div>
+							<h4><a href="">Access Control</a></h4>
+							<p>Dahua Access Control offers a wide range of products and various solutions designed for
+								preventing unauthorized...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/Alarms1.png" alt="">
+							</div>
+							<h4><a href="">Alarm</a></h4>
+							<p>Alarms are an important component in keeping your house and premises safe. Dahua offers
+								both wireless and...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/Mobile_Traffic.png" alt="">
+							</div>
+							<h4><a href="">Mobile & Traffic</a></h4>
+							<p>Daily commutes are a part of life. Dahua offers a wide-range of Intelligent
+								Transportation System (ITS)...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/Transmission.png" alt="">
+							</div>
+							<h4><a href="">Transmission</a></h4>
+							<p>Dahua Technology is a world-leading advanced video surveillance solution provider with
+								rich experience in video...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/Display_contorl2.png" alt="">
+							</div>
+							<h4><a href="">Display & Control</a></h4>
+							<p>Dahua provides a wide range of high quality display and control solutions for security
+								and commercial use....</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/IVS.png" alt="">
+							</div>
+							<h4><a href="">IVS</a></h4>
+							<p>Dahua provides a wide range of high quality display and control solutions for security
+								and commercial use...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/Storage.png" alt="">
+							</div>
+							<h4><a href="">Storage</a></h4>
+							<p>Dahua provides a wide range of high quality display and control solutions for security
+								and commercial use...</p>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-5 d-flex align-items-stretch mt-4">
+						<div class="icon-box">
+							<div class="icon">
+								<img src="img/product/security-scrining.png" alt="">
+							</div>
+							<h4><a href="">Security Screening Server</a></h4>
+							<p></p>
 						</div>
 					</div>
 
@@ -299,8 +422,8 @@
 								<h4>Card 1</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+									<a href="img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox"
+										title="Card 1"><i class="bx bx-plus"></i></a>
 									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
 										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
 											class="bx bx-link"></i></a>
@@ -316,8 +439,8 @@
 								<h4>Card 3</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+									<a href="img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
+										title="Card 3"><i class="bx bx-plus"></i></a>
 									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
 										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
 											class="bx bx-link"></i></a>
@@ -333,8 +456,8 @@
 								<h4>Web 3</h4>
 								<p>Web</p>
 								<div class="portfolio-links">
-									<a href="img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+									<a href="img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox"
+										title="Web 3"><i class="bx bx-plus"></i></a>
 									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
 										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
 											class="bx bx-link"></i></a>
@@ -350,8 +473,8 @@
 								<h4>Card 1</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+									<a href="img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox"
+										title="Card 1"><i class="bx bx-plus"></i></a>
 									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
 										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
 											class="bx bx-link"></i></a>
@@ -367,8 +490,8 @@
 								<h4>Card 3</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+									<a href="img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
+										title="Card 3"><i class="bx bx-plus"></i></a>
 									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
 										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
 											class="bx bx-link"></i></a>
@@ -384,8 +507,8 @@
 								<h4>Web 3</h4>
 								<p>Web</p>
 								<div class="portfolio-links">
-									<a href="img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+									<a href="img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox"
+										title="Web 3"><i class="bx bx-plus"></i></a>
 									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
 										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
 											class="bx bx-link"></i></a>
@@ -727,7 +850,7 @@
 	<script src="js/owl.carousel.js"></script>
 	<script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
 	<script>
-		$(document).ready(function() {
+		$(document).ready(function () {
 			$('#myModal').modal('hide');
 			$('.customer-logos').slick({
 				slidesToShow: 6,
