--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
 								placeholder="Password...">
 						</div>
 						<div class="form-group">
-							<a href="" class="btn btn-info btn-lg btn-block btn-login">Login</a>
+							<a href="admin/index.html" class="btn btn-info btn-lg btn-block btn-login">Login</a>
 						</div>
 						<hr>
 						<h6 class="forgot"><a href="#">Forgot Password?</a></h6>
