menyeting menu style

--- a/index.html
+++ b/index.html
@@ -849,7 +849,12 @@
 	<!-- Template Main JS File -->
 	<script src="js/main.js"></script>
 	<script src="js/owl.carousel.js"></script>
+
+	<!-- animate slide client-->
 	<script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
+
+	<!--Animate Menu-->
+	<script src="js/main-menu.js" type="text/javascrip"></script>
 	<script>
 		$(document).ready(function () {
 			$('#myModal').modal('hide');
